<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/botaoGerEquip"
        android:layout_width="@dimen/largura_botao_principal"
        android:layout_height="@dimen/altura_botao_principal"
        android:layout_marginBottom="56dp"
        android:text="@string/botao_gerenciar_equip"
        app:layout_constraintBottom_toTopOf="@+id/botaoGerEmp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="@dimen/largura_divisoria_principal"
        android:layout_height="@dimen/altura_divisoria_principal"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="52dp"
        android:background="@color/colorSnow"
        app:layout_constraintBottom_toTopOf="@+id/botaoGerEmp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/botaoGerEquip" />

    <Button
        android:id="@+id/botaoGerEmp"
        android:layout_width="@dimen/largura_botao_principal"
        android:layout_height="@dimen/altura_botao_principal"
        android:layout_marginBottom="32dp"
        android:text="@string/botao_gerenciar_emp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="@dimen/largura_divisoria_principal"
        android:layout_height="@dimen/altura_divisoria_principal"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="52dp"
        android:background="@color/colorSnow"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/botaoGerEmp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoGerEquip" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/textview_divisoria_principal"
        android:textColor="@color/colorSnow"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/botaoGerEmp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoGerEquip" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/largura_botao_principal"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="320dp"
        android:contentDescription="@string/imageview_principal_descricao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>